# watson-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MCP_README.md  Makefile  README.md  agent.py  alembic.ini  app.py  db.py  env.example  llm_client.py  mcp_config.py  mcp_manager.py  models.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py  settings.py  test_integration.py  utils.py  workers.py
.github/workflows/: ci.yml
examples/: python_client.py  quick_start.sh
examples/mcp_servers/: http_audit_server.py  simple_audit_server.py
migrations/: env.py
migrations/versions/: 0001_initial_migration.py
tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_llm_client.py  test_utils.py
