[project]
name = "watson-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.2",
    "fastapi>=0.115.0",
    "httpx==0.27.2",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.2.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.45",
    "loguru==0.7.2",
    "mcp>=1.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "python-multipart==0.0.12",
    "requests==2.31.0",
    "sqlalchemy==2.0.36",
    "typing-extensions>=4.12.2",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.2",
]
